--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="away-title">
-                <h3>AWAY</h3>
+                <h3>GUEST</h3>
                 <div class="away-score">
                     <div class="away-points-text">
                         <h3 id="away-points">0</h3>
