Change home and away to team names
changed home and away header to read Man Utd and Liverpool

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div class="home-title">
-                <h3>HOME</h3>
+                <h3>MAN UTD</h3>
                 <div class="home-score">
                     <div class="home-points-text">
                         <h3 id="home-points">0</h3>      
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="away-title">
-                <h3>GUEST</h3>
+                <h3>LIVERPOOL</h3>
                 <div class="away-score">
                     <div class="away-points-text">
                         <h3 id="away-points">0</h3>
